--- a/efoods/package.json
+++ b/efoods/package.json
@@ -28,12 +28,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,19 +41,10 @@
     ]
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.7.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.8.0",
     "prettier": "3.3.3",
-    "react-redux": "^9.1.2",
-    "typescript-eslint": "^7.16.1"
+    "react-redux": "^9.1.2"
   }
 }
