--- a/Nova pasta/efoods/package.json
+++ b/Nova pasta/efoods/package.json
@@ -3,23 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@rollup/plugin-terser": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.101",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^16.18.116",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
-    "react-scripts": "^5.0.1",
-    "rimraf": "^6.0.1",
-    "styled-components": "^6.1.11",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^4.2.4",
+    "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
   "scripts": {
@@ -27,6 +25,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -41,9 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^2.2.6",
+    "@reduxjs/toolkit": "^2.3.0",
     "@types/styled-components": "^5.1.34",
-    "globals": "^15.8.0",
     "prettier": "3.3.3",
     "react-redux": "^9.1.2"
   }
