--- a/Nova pasta/efoods/package.json
+++ b/Nova pasta/efoods/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/react-input-mask": "^3.0.5",
     "@types/styled-components": "^5.1.34",
     "prettier": "3.3.3",
     "react-redux": "^9.1.2"
